# googletest-mva

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  square_root.cpp
.github/workflows/: cmake.yml
count_bits/: CMakeLists.txt  countbits.c  countbits.h
square_root/: CMakeLists.txt
src/: CMakeLists.txt  Dockerfile  countbits.c  countbits.hh  countbits_app.c  countbits_tests.cc  square_root.c  square_root.h  square_root.hh  square_root_app.c  square_root_tests.cc  square_root_tests.cpp
src/count_bits/: CMakeLists.txt
src/square_root/: CMakeLists.txt  square_root.h  square_root_tests.cc
